# nappgui-win32-cmake

./: CMakeCache.txt  CMakeLists.txt
src/: dpi-aware.manifest  main.cpp
